Restructuring project into other folder hierarchy, tweaking some comments and following some of IntelliJ's code suggestions.